objects/Intranet_Item__c.object
<CustomObject>
    <description>Individual Content Items</description>
    <fields>
        <fullName>ABC_Network_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the link/app is only available when on the ABC network</inlineHelpText>
        <label>ABC Network Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <label>Active Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Main_Image_Id__c</fullName>
        <description>Includes Id of the file Attachment on the Content Item record.  Field is read-only on page layout, and is updated using the &apos;Content Image&apos; Action</description>
        <inlineHelpText>If specified, this image is used instead of an Image Set.</inlineHelpText>
        <label>Ad-Hoc Main Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Thumbnail_Image_Id__c</fullName>
        <description>Includes Id of the file Attachment on the Content Item record.  Field is read-only on page layout, and is updated using the &apos;Content Image&apos; Action</description>
        <inlineHelpText>If specified, this image is used instead of an Image Set</inlineHelpText>
        <label>Ad-Hoc Thumbnail Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that alternative content should be displayed from a specified URL</inlineHelpText>
        <label>Alternate Content?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Item must be marked as Approved in order to be scheduled to appear on the Boardroom</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Article_Author__c</fullName>
        <label>Article Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Publish_Date__c</fullName>
        <inlineHelpText>Date the article was originally published</inlineHelpText>
        <label>Article Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <inlineHelpText>Type of Article on Extrenal system (Advisory.com or EAB.com)</inlineHelpText>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <inlineHelpText>Average Rating of Item from Utilization records</inlineHelpText>
        <label>Average Rating</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Utilization_Rating__c</fullName>
        <formula>IF(  AND( NOT( ISBLANK( Rating_Count__c ) ), NOT( ISBLANK (  Total_Rating__c  ) )), Total_Rating__c / Rating_Count__c , null)</formula>
        <inlineHelpText>Total Rating Value / # Ratings</inlineHelpText>
        <label>Average Utilization Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Background_Color_Code__c</fullName>
        <inlineHelpText>Color to use for Background</inlineHelpText>
        <label>Background Color Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <formula>Color_Set__r.Background_Color_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdays_Cache__c</fullName>
        <description>Updated by a timed-workflow function</description>
        <inlineHelpText>Birthday Data refreshed daily for display</inlineHelpText>
        <label>Birthdays Cache</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <inlineHelpText>Category as it will appear</inlineHelpText>
        <label>Category Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Reference_Name__c</fullName>
        <formula>Main_Category__r.Category_Name__c</formula>
        <inlineHelpText>Category Name to appear in Content Item</inlineHelpText>
        <label>Category Reference Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Configuration_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Protects items used for Configuration from being changed inadvertantly.  Used together with &apos;Configuration Item&apos;</description>
        <inlineHelpText>Check this box to allow a change to a Configuration item</inlineHelpText>
        <label>Change Configuration Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Comments_Rollup__c</fullName>
        <label>Chatter Comments</label>
        <summaryFilterItems>
            <field>Intranet_Utilization__c.Click_Type__c</field>
            <operation>equals</operation>
            <value>Comment</value>
        </summaryFilterItems>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chatter_Comments__c</fullName>
        <inlineHelpText>Count of Comments received in Chatter</inlineHelpText>
        <label>Chatter Comments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Likes__c</fullName>
        <label>Chatter Likes</label>
        <summaryFilterItems>
            <field>Intranet_Utilization__c.Click_Type__c</field>
            <operation>equals</operation>
            <value>Like</value>
        </summaryFilterItems>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chatter_Shares__c</fullName>
        <label>Chatter Shares</label>
        <summaryFilterItems>
            <field>Intranet_Utilization__c.Click_Type__c</field>
            <operation>equals</operation>
            <value>Share</value>
        </summaryFilterItems>
        <summaryForeignKey>Intranet_Utilization__c.Intranet_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Citation__c</fullName>
        <label>Citation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Set_Name__c</fullName>
        <inlineHelpText>Color Set Name for reference</inlineHelpText>
        <label>Color Set Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Set_Reference_Name__c</fullName>
        <formula>Color_Set__r.Color_Set_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Color Set Name for reference</inlineHelpText>
        <label>Color Set Reference Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Set_Type__c</fullName>
        <formula>TEXT(Color_Set__r.Set_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color Set Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set of pre-selected colors to use</inlineHelpText>
        <label>Color Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Item__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Settings - Color Set</value>
            </filterItems>
            <filterItems>
                <field>Intranet_Item__c.Active_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Items</relationshipLabel>
        <relationshipName>Intranet_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Protects items used for Configuration from being changed inadvertantly.  Used together with &apos;Change Configuration Item&apos;</description>
        <inlineHelpText>Indicates this item is part of the page Configuration, not a Content item</inlineHelpText>
        <label>Configuration Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container_Class__c</fullName>
        <description>Used only for Flexible container items</description>
        <formula>CASE(TEXT(Item_Type__c),
&apos;Ad Item&apos;,$Label.Intranet_ContainerClass_Ad,
&apos;Talent Item&apos;,$Label.Intranet_ContainerClass_Talent,
&apos;Job Item&apos;,$Label.Intranet_ContainerClass_Job,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls how the Flexible Container displays the Content item</inlineHelpText>
        <label>Container Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Author_Speaker__c</fullName>
        <inlineHelpText>Author, Creator, or Speaker for the Content</inlineHelpText>
        <label>Content Author/Speaker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Length__c</fullName>
        <inlineHelpText>Length in HH:MM:SS Format</inlineHelpText>
        <label>Content Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Main_Image_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Ad_Hoc_Main_Image_Id__c)),Ad_Hoc_Main_Image_Id__c,IF(NOT(ISBLANK(Image_Set_Main_Image_Id__c)),Image_Set_Main_Image_Id__c,&apos;&apos;))</formula>
        <inlineHelpText>Id for Main Image from related Image Set, unless Ad-Hoc Main Image is linked</inlineHelpText>
        <label>Content Main Image Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Main_Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Content_Main_Image_Id__c)),HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Content_Main_Image_Id__c,&quot;Link to Main Image&quot;,&quot;_blank&quot;),&apos;&apos;)</formula>
        <inlineHelpText>Main Image from related Image Set, unless Ad-Hoc Main Image is linked</inlineHelpText>
        <label>Content Main Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Management_Notes__c</fullName>
        <inlineHelpText>Notes do not appear on Boardroom and are only visible to Content Managers</inlineHelpText>
        <label>Content Management Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Publish_Date__c</fullName>
        <inlineHelpText>Date the item was originally published</inlineHelpText>
        <label>Content Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Content_Thumbnail_Image_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(Ad_Hoc_Thumbnail_Image_Id__c)),Ad_Hoc_Thumbnail_Image_Id__c,IF(NOT(ISBLANK(Image_Set_Thumbnail_Image_Id__c)),Image_Set_Thumbnail_Image_Id__c,&apos;&apos;))</formula>
        <inlineHelpText>Id for Thumbnail Image from related Image Set, unless Ad-Hoc Thumbnail Image is linked</inlineHelpText>
        <label>Content Thumbnail Image Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Thumbnail_Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Content_Thumbnail_Image_Id__c)),HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Content_Thumbnail_Image_Id__c,&quot;Link to Thumbnail Image&quot;,&quot;_blank&quot;),&apos;&apos;)</formula>
        <inlineHelpText>Thumbnail Image from related Image Set, unless Ad-Hoc Thumbnail is linked</inlineHelpText>
        <label>Content Thumbnail Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <inlineHelpText>Type of Content to be shown in the Content Viewer.</inlineHelpText>
        <label>zzzContent Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hand-Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preformatted HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_URL_Validated__c</fullName>
        <description>Created for CR-20150219-8692</description>
        <label>Content URL (Validated)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Content_URL__c</fullName>
        <inlineHelpText>Location of the Content to display in the Content Viewer.  Web sites must start with http:// or https://</inlineHelpText>
        <label>Alternate Content URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Source__c</fullName>
        <defaultValue>$Label.Intranet_CreateSource_Default</defaultValue>
        <description>Read-only on page layouts</description>
        <inlineHelpText>How was this item created?</inlineHelpText>
        <label>Create Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPA_Score_Type__c</fullName>
        <description>Used only for Flexible container items</description>
        <formula>CASE(TEXT(Item_Type__c),
&apos;Ad Item&apos;,$Label.Intranet_DPAtype_Ad,
&apos;Talent Item&apos;,$Label.Intranet_DPAtype_Talent,
&apos;Job Item&apos;,$Label.Intranet_DPAtype_Job,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of DPA calculation to perform determines which elements are part of the calculation</inlineHelpText>
        <label>DPA Score Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Content_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Content Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Used only for Flexible container items</description>
        <formula>CASE(TEXT(Item_Type__c),
&apos;Ad Item&apos;,$Label.Intranet_DisplayName_Ad,
&apos;Talent Item&apos;,$Label.Intranet_DisplayName_Talent,
&apos;Job Item&apos;,$Label.Intranet_DisplayName_Job,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name used on page component and Content Viewer, if applicable</inlineHelpText>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-8543 - Created as a workaround for an issue where chatter only users can only access the filtered contact lookup field on a VF page without sharing if they have at least read access to the object.  License limitation means they cannot have read access to cases, so we had to add the lookup to an object all profiles have at least read access.</description>
        <label>Employee Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Intranet Items</relationshipLabel>
        <relationshipName>Intranet_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_Time__c</fullName>
        <inlineHelpText>&apos;For Events, &apos;Is Visible?&apos; is True if this field is a future date/time.</inlineHelpText>
        <label>Event End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Time__c</fullName>
        <label>Event Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <inlineHelpText>Status of the actual event</inlineHelpText>
        <label>Event Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABC Office Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Date to Stop showing item, if applicable</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Final_Expiration__c</fullName>
        <inlineHelpText>Date to Stop showing item, if applicable</inlineHelpText>
        <label>Final Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Available__c</fullName>
        <inlineHelpText>Date to Start showing item</inlineHelpText>
        <label>First Available</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <inlineHelpText>Example &apos;7th Floor&apos;</inlineHelpText>
        <label>Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Available_Date__c</fullName>
        <inlineHelpText>Date to Start showing item</inlineHelpText>
        <label>Global Available Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Global_Expiration_Date__c</fullName>
        <inlineHelpText>Date to Stop showing item, if applicable</inlineHelpText>
        <label>Global Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoToMeeting_Link__c</fullName>
        <label>GoToMeeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Icon_Style__c</fullName>
        <description>Font Awesome icon list - http://fortawesome.github.io/Font-Awesome/icons/</description>
        <inlineHelpText>Icon selection from Advisory Board app icons or a select set of icons from Font Awesome</inlineHelpText>
        <label>Icon Style</label>
        <picklist>
            <controllingField>Item_Type__c</controllingField>
            <picklistValues>
                <fullName>fa fa-calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa fa-clock-o</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa fa-cloud-download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa fa-thumbs-o-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fa fa-wifi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>abc-training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>advisory-com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>benefits-portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>blackboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>business-cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>community-impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dss-portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eab-com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email-signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etech-portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>icims-employee-career-center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>icims-referrals-center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>information-security-portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>innovaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>management-portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mdlive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meeting-registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meeting-room-manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>metlife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>metro-express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>one-advisory-board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pay-flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>publication-recorders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_Set_Main_Image_Id__c</fullName>
        <formula>Image_Set__r.Image_for_Main_Content__c</formula>
        <inlineHelpText>Id for Main Image from related Image Set</inlineHelpText>
        <label>Image Set Main Image Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Set_Name__c</fullName>
        <inlineHelpText>Used as part of the record name for identification</inlineHelpText>
        <label>Image Set Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Set_Reference_Name__c</fullName>
        <formula>Image_Set__r.Image_Set_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Image Set Name for Reference</inlineHelpText>
        <label>Image Set Reference Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Set_Thumbnail_Image_Id__c</fullName>
        <formula>Image_Set__r.Image_for_Thumbnail__c</formula>
        <inlineHelpText>Id for Thumbnail Image from related Image Set</inlineHelpText>
        <label>Image Set Thumbnail Image Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Set_Type__c</fullName>
        <formula>TEXT( Image_Set__r.Set_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&apos;Standard&apos; if both images are from an Image Set, otherwise &apos;Ad-Hoc&apos;</inlineHelpText>
        <label>Image Set Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Image Set Name for Reference</inlineHelpText>
        <label>Image Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intranet_Item__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Settings - Image Set</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intranet_Item__c</referenceTo>
        <relationshipLabel>Intranet Items (Image Set)</relationshipLabel>
        <relationshipName>Intranet_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_URL_for_Main_Content__c</fullName>
        <formula>IF(NOT(ISBLANK(Image_for_Main_Content__c)),HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Image_for_Main_Content__c,&quot;Link to Main Image&quot;,&quot;_blank&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL for Main Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL_for_Thumbnail__c</fullName>
        <formula>IF(NOT(ISBLANK(Image_for_Thumbnail__c)),HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Image_for_Thumbnail__c,&quot;Link to Thumbnail Image&quot;,&quot;_blank&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL for Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_for_Main_Content__c</fullName>
        <description>Includes Id for the file location in Salesforce</description>
        <inlineHelpText>Standard Image to be used as Main Image for Content</inlineHelpText>
        <label>Image for Main Content</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_for_Thumbnail__c</fullName>
        <description>Includes Id for the file location in Salesforce</description>
        <inlineHelpText>Standard Image to be used as Thumbnail Image for Content</inlineHelpText>
        <label>Image for Thumbnail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <formula>IF( 
OR( 
IF(AND(RecordType.Name = &apos;Settings - Office&apos;,ISPICKVAL(Active_Status__c,&apos;Active&apos;)),TRUE,FALSE), /*Offices*/ 
AND( 
ISPICKVAL(Active_Status__c,&apos;Active&apos;), 
ISPICKVAL(Approval_Status__c,&apos;Approved&apos;), 
IF(RecordType.Name = &apos;Item - Event&apos;, 
IF(OR(AND(Event_End_Date_Time__c &gt;= NOW(), NOT(ISPICKVAL(Item_Type__c,&apos;Training Event&apos;)), NOT(ISPICKVAL(Item_Type__c,&apos;Office Event&apos;))), AND(Event_Start_Date_Time__c &gt; NOW(), OR(ISPICKVAL(Item_Type__c,&apos;Training Event&apos;), ISPICKVAL(Item_Type__c,&apos;Office Event&apos;)))), TRUE, FALSE), 	
IF(AND(RecordType.Name = &apos;Item - Trending&apos;,NOT(ISPICKVAL(Item_Type__c,&apos;Birthdays&apos;)),NOT(ISPICKVAL(Item_Type__c,&apos;Weather&apos;))), 
IF(Last_Content_Update__c &gt; (NOW()-1), TRUE, FALSE), /* Select any items updated in last 24 hours */ 
AND( 
IF(NOT(ISBLANK(Global_Available_Date__c)),NOW() &gt; Global_Available_Date__c,TRUE), 
IF(NOT(ISBLANK(Global_Expiration_Date__c)),NOW() &lt; Global_Expiration_Date__c,TRUE) 
) 
) 
) 
) 
), 
TRUE, 
FALSE 
)</formula>
        <inlineHelpText>Visible if Active, Approved, and within date range (Global Dates, Event Date, or Last Content Update Date)</inlineHelpText>
        <label>Is Visible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Abstract__c</fullName>
        <label>Item Abstract</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Full_Text__c</fullName>
        <inlineHelpText>Full Article text</inlineHelpText>
        <label>Item Full Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Headline__c</fullName>
        <label>Item Headline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Subtitle__c</fullName>
        <inlineHelpText>Summary Text</inlineHelpText>
        <label>Item Subtitle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Title__c</fullName>
        <label>Item Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm App Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poll Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - EAB.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trending - Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Content_Update__c</fullName>
        <inlineHelpText>Timestamp of the last update of this item&apos;s content.  &apos;Is Visible?&apos; is True if in the last 24 hours.</inlineHelpText>
        <label>Last Content Update</label>
        <type>DateTime</type>
    </fields>
</CustomObject>